php-src/tests/classes/constants_visibility_error_004.exp
Fatal error: Access level to B::protectedConst must be protected (as in class A) or weaker in %s on line 9