php-src/tests/classes/constants_visibility_error_004.php
<?php

class A {
	protected const protectedConst = 0;
}

class B extends A {
	private const protectedConst = 1;
}
